--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link href="https://fonts.cdnfonts.com/css/inconsolata-3" rel="stylesheet">
-    <link rel="stylesheet" href="css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -207,4 +207,5 @@
 
 
 </body>
+
 </html>
