--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     
 </div>
-  <h3>notscottcarlson.com 
+  <h3>repair-instead.com 
     <br>
     <br>
   </h4>
@@ -209,5 +209,6 @@
 </body>
 
 </html>
+
 
 
